rollout_test.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollout-example
spec:
  replicas: 8
  strategy:
    canary:
      canaryService: canary-svc  # required
      stableService: stable-svc  # required
      trafficRouting:
        istio:
          virtualService:
            name: rollout-vsvc   # required
            routes:
            - primary            # optional if there is a single route in VirtualService, required otherwise
      steps:
      - setWeight: 5
      - pause:
          duration: 10m
          
    template:
      metadata:
        labels:
          app: rollout-example
      spec:
        containers:
        - name: rollout-example
          image: argoproj/rollouts-demo:blue
          ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          resources:
            requests:
              memory: 32Mi
              cpu: 5m
